<resources>
    <string name="app_name">Botify</string>
    <string name="action_settings">Settings</string>
    <string name="main_fragment_label">First Fragment</string>
    <string name="video_fragment_label">Second Fragment</string>
    <string name="buttonAudio">Music</string>
    <string name="previous">Main Menu</string>
    <string name="menu_main">Main</string>
    <string name="video_fragment">Videos</string>
    <string name="title_activity_entry">EntryActivity</string>
    <string name="entryName">Botify</string>
    <string name="entryButtonText">botify me</string>
    <string name="entryImageContent">entry image</string>
    <string name="buttonVideo">Videos</string>
    <string name="buttonImages">Artwork</string>
    <string name="buttonAbout">About</string>
    <string name="buttonUpdate">Check for more</string>
    <string name="menu_music">Music</string>
    <string name="menu_image">Visual Artwork</string>
    <string name="menu_video">Video</string>
    <string name="menu_about">About</string>
    <string name="audio_display">Select Track to Play</string>
    <string name="image_display_name">Select Image to View</string>
    <string name="biography1">
        The urban music style of Boti
        can only be described as "Modern Lament".
        If you are listening to one of his songs,
        or even get just an extract you would
        probably say, it is Indie rock, pop or
        even a post rock style. The music reminds of
        alternative rock from the nineties,
        mixed with complicated rhythms and
        rough hardness from the Neo progressive
        rock genre.
    </string>
    <string name="biography2">
        Boti also has a passion for creating visual arts,
        creating motives reflecting his music on
        another level.
    </string>
    <string name="biography3">[Tap here for website]</string>
    <string name="play_pause">play/pause</string>
    <string name="content_description_play_pause">con_des_play_pause</string>
    <string name="more">check for more</string>
    <string name="content_description_more">test_content_more</string>
    <string name="content_description_menu_name">con_des_menu_name</string>
    <string name="menu_name">main/sub</string>
</resources>