<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".menu.sub.audio.AudioFragment">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.618">

            <ImageView
                android:id="@+id/audio_menu_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/entryImageContent"
                app:srcCompat="@drawable/xmchn2_entry"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

<!--            <SeekBar-->
<!--                android:id="@+id/seek_bar"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_margin="8sp"-->
<!--                android:saveEnabled="false"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintHorizontal_bias="0.6"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@id/audio_menu_image" />-->

        </FrameLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.07">

            <TextView
                android:id="@+id/display_audio_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/info_text_size"
                android:textAlignment="center"
                android:text="@string/audio_display"
                android:gravity="center_horizontal"
                app:layout_constraintBottom_toTopOf="@id/audio_divider"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <View
                android:id="@+id/audio_divider"
                style="@style/divider_full"
                app:layout_constraintTop_toBottomOf="@id/display_audio_text"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.082">

            <TextView
                android:id="@+id/subAudioMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32sp"
                android:layout_marginLeft="32sp"
                android:fontFamily="@font/front_page_n"
                android:text="@string/menu_music"
                android:textSize="@dimen/menu_title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/buttonAudioToMain"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/buttonAudioToMain"
                android:layout_width="@dimen/button_check_main_width"
                android:layout_height="@dimen/button_height"
                android:layout_marginEnd="32sp"
                android:layout_marginRight="32sp"
                android:fontFamily="@font/front_page_n"
                android:text="@string/previous"
                android:textSize="@dimen/entryButtonSize"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/subAudioMenu"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.23">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/audio_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</layout>